--- a/TrayUtility/Views/MainWindow.xaml
+++ b/TrayUtility/Views/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="UtilitiesHandler.MainWindow"
+﻿<Window x:Class="UtilitiesHandler.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UtilitiesHandler"
+        WindowState="{Binding WindowState}"
         Closing="MainWindow_Closing"
         mc:Ignorable="d"
         Title="Utilities Window" Height="450" Width="800" MaxHeight="450" MaxWidth="800" FontSize="14" WindowStyle="ThreeDBorderWindow" WindowStartupLocation="CenterScreen">
@@ -28,24 +29,17 @@
               Name="listView1" 
               VerticalAlignment="Top" 
               Width="320"
-              ItemsSource="{Binding}"
+              ItemsSource="{Binding Utilities}"
               IsSynchronizedWithCurrentItem="True"
-              Grid.ColumnSpan="2" Margin="10,44,0,0" SelectionChanged="listView1_SelectionChanged">
-            <ListView.View>
-                <GridView>
-                    <GridView.Columns>
-                        <GridViewColumn>
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <CheckBox Tag="{Binding ID}" IsChecked="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}, Path=IsSelected}" />
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
-                        <GridViewColumn DisplayMemberBinding="{Binding ID}" Header="ID" />
-                        <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Name" />
-                    </GridView.Columns>
-                </GridView>
-            </ListView.View>
+              Grid.ColumnSpan="2" Margin="10,44,0,0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Label  Content="{Binding Name}"/>
+                        <CheckBox IsChecked="{Binding Enabled}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
         <Label Content="Enable/Disable utilities:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="14" Height="29" Width="153" Grid.ColumnSpan="2"/>
         <Label Content="Log of utilities:" HorizontalAlignment="Left" Margin="300,10,0,0" VerticalAlignment="Top" FontSize="14" Height="29" Width="101" Grid.Column="1"/>
